; ModuleID = '/home/carl/AnghaBench/linux/drivers/spi/extr_atmel-quadspi.c_atmel_qspi_find_mode.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/spi/extr_atmel-quadspi.c_atmel_qspi_find_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spi_mem_op = type { i32 }

@atmel_qspi_modes = common dso_local global i32* null, align 8
@ENOTSUPP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.spi_mem_op*)* @atmel_qspi_find_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @atmel_qspi_find_mode(%struct.spi_mem_op* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.spi_mem_op*, align 8
  %4 = alloca i64, align 8
  store %struct.spi_mem_op* %0, %struct.spi_mem_op** %3, align 8
  store i64 0, i64* %4, align 8
  br label %5

5:                                                ; preds = %21, %1
  %6 = load i64, i64* %4, align 8
  %7 = load i32*, i32** @atmel_qspi_modes, align 8
  %8 = call i64 @ARRAY_SIZE(i32* %7)
  %9 = icmp ult i64 %6, %8
  br i1 %9, label %10, label %24

10:                                               ; preds = %5
  %11 = load %struct.spi_mem_op*, %struct.spi_mem_op** %3, align 8
  %12 = load i32*, i32** @atmel_qspi_modes, align 8
  %13 = load i64, i64* %4, align 8
  %14 = getelementptr inbounds i32, i32* %12, i64 %13
  %15 = call i64 @atmel_qspi_is_compatible(%struct.spi_mem_op* %11, i32* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %10
  %18 = load i64, i64* %4, align 8
  %19 = trunc i64 %18 to i32
  store i32 %19, i32* %2, align 4
  br label %27

20:                                               ; preds = %10
  br label %21

21:                                               ; preds = %20
  %22 = load i64, i64* %4, align 8
  %23 = add i64 %22, 1
  store i64 %23, i64* %4, align 8
  br label %5

24:                                               ; preds = %5
  %25 = load i32, i32* @ENOTSUPP, align 4
  %26 = sub nsw i32 0, %25
  store i32 %26, i32* %2, align 4
  br label %27

27:                                               ; preds = %24, %17
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local i64 @ARRAY_SIZE(i32*) #1

declare dso_local i64 @atmel_qspi_is_compatible(%struct.spi_mem_op*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
